--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,19 +6,19 @@
 #    By: yecnam <yecnam@student.42seoul.kr>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/01/27 15:53:48 by yecnam            #+#    #+#              #
-#    Updated: 2023/02/21 18:34:26 by yecnam           ###   ########.fr        #
+#    Updated: 2023/02/25 14:09:50 by yecnam           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = philo
 
-SRCS = main.c init.c free.c
+SRCS = main.c init.c free.c fork.c func.c
 OBJS = $(SRCS:.c=.o)
 
 INC = ./
 
 CC = cc
-CFLAGS = #-g -fsanitize=address#-Wall -Wextra -Werror
+CFLAGS = -Wall -Wextra -Werror
 
 all : $(NAME)
 
